@@ -1363,10 +1363,14 @@ class EditPage {
 		if ( $this->section == 'new' ) {
 			$commentsubject = '';
 			if ( !$wgRequest->getBool( 'nosummary' ) ) {
+				# Add a class if 'missingsummary' is triggered to allow styling of the summary line
+				$summaryClass = $this->missingSummary ? 'mw-summarymissed' : 'mw-summary';
+
 				$commentsubject =
 					Xml::tags( 'label', array( 'for' => 'wpSummary' ), $subject );
 				$commentsubject =
-					Xml::tags( 'span', array( 'id' => 'wpSummaryLabel' ), $commentsubject );
+					Xml::tags( 'span', array( 'class' => $summaryClass, 'id' => "wpSummaryLabel" ),
+						$commentsubject );
 				$commentsubject .= '&nbsp;';
 				$commentsubject .= Xml::input( 'wpSummary',
 									60,
@@ -1385,10 +1389,13 @@ class EditPage {
 		} else {
 			$commentsubject = '';
 
+			# Add a class if 'missingsummary' is triggered to allow styling of the summary line
+			$summaryClass = $this->missingSummary ? 'mw-summarymissed' : 'mw-summary';
+
 			$editsummary = Xml::tags( 'label', array( 'for' => 'wpSummary' ), $summary );
-			$editsummary =
-				Xml::tags( 'span', array( 'id' => 'wpSummaryLabel' ), $editsummary ) . ' ';
-				
+			$editsummary = Xml::tags( 'span',  array( 'class' => $summaryClass, 'id' => "wpSummaryLabel" ),
+					$editsummary ) . ' ';
+
 			$editsummary .= Xml::input( 'wpSummary',
 				60,
 				$summarytext,
@@ -1397,11 +1404,11 @@ class EditPage {
 					'maxlength' => '200',
 					'tabindex' => '1'
 				) );
-			
+
 			// No idea where this is closed.
 			$editsummary = Xml::openElement( 'div', array( 'class' => 'editOptions' ) )
 							. $editsummary . '<br/>';
-				
+
 			$summarypreview = '';
 			if ( $summarytext && $this->preview ) {
 				$summarypreview =
